--- a/src/main/res/values-it/strings.xml
+++ b/src/main/res/values-it/strings.xml
@@ -185,6 +185,7 @@
     <string name="filter_age_start_prefix">Dai %s</string>
     <string name="filter_age_end_prefix">ai %s</string>
     <string name="filter_cities_all">In tutte le città</string>
+    <string name="purchase_header_title">Credito:</string>
     <string name="buying_header_title">Acquisti</string>
     <plurals name="buying_gift_you_need_coins">
         <item quantity="other">Per inviare il regalo compra ancora %d monete</item>
