--- a/src/main/res/values-es/strings.xml
+++ b/src/main/res/values-es/strings.xml
@@ -185,6 +185,7 @@
     <string name="filter_age_start_prefix">Desde %s</string>
     <string name="filter_age_end_prefix">hasta %s</string>
     <string name="filter_cities_all">En todas las ciudades</string>
+    <string name="purchase_header_title">Saldo:</string>
     <string name="buying_header_title">Compras</string>
     <plurals name="buying_gift_you_need_coins">
         <item quantity="other">Para enviar regalo, compra %d monedas más</item>
@@ -630,4 +631,13 @@
     <string name="on_mail">A e-mail</string>
     <string name="add_leader_hint">Tu saludo…</string>
     <string name="more">más</string>
+    <string name="premium_for_invitations">Para recibir el estado VIP para 1 día necesitas conseguir 5 registros.</string>
+    <string name="premium_for_invitations_current_status">Ya tienes:\nInvitaciones: %1$d\nRegistros: %2$d</string>
+    <string name="no_contacts_available">No hay contactos para mostrar</string>
+    <string name="sms_invite_title">¡Recibe VIP para un día!</string>
+    <string name="sms_invite_subtitle">¡Recibe VIP para un día!</string>
+    <string name="status_can_send_confirmation">Invitar</string>
+    <string name="status_invilid_phone_number">Número no valido</string>
+    <string name="status_confirmation_was_sent">Esperando confirmación</string>
+    <string name="status_user_registered">Ya registrado</string>
 </resources>
