--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -15,7 +15,7 @@
     <string name="notification_denied_popup_title">Разрешите уведомления, чтобы узнавать о входящих сообщениях, симпатиях и других новостях.</string>
     <string name="notification_popup_title">Разрешите присылать вам уведомления, чтобы вы мгновенно могли узнать о новой симпатии, восхищении или непрочитанном сообщении</string>
     <string name="email_successfully_changed">Ваш e-mail успешно изменен</string>
-    <string name="auth_vk_name">ВКонтакте</string>g
+    <string name="auth_vk_name">ВКонтакте</string>
     <string name="dating_switch_button">Еще…</string>
     <string name="dating_prev_button">Предыдущая</string>
     <string name="dating_chat_button">Поболтать</string>
