--- a/src/main/res/values-sv/strings.xml
+++ b/src/main/res/values-sv/strings.xml
@@ -14,6 +14,7 @@
     <string name="dating_switch_button">Fler</string>
     <string name="dating_prev_button">Föregående</string>
     <string name="dating_chat_button">Chatta</string>
+    <string name="waiting_a_products">Var god vänta. Vi matar in de varor som är tillgängliga för köp</string>
     <string name="likes_background_text">Inga sympatier</string>
     <string name="visitors_background_text">Inga gäster</string>
     <string name="chat_background_text">Inga inkommande meddelanden</string>
@@ -110,6 +111,9 @@
     <string name="pincode_forget">Glömt PIN-kod?</string>
     <string name="pincode_auth_input">Du behöver ange dina login och lösenord</string>
     <string name="pincode_will_be_reset">Vid lyckad auktorisation återställs applikationens samtliga inställningar.</string>
+    <plurals name="pincode_interval">
+        <item quantity="zero">Omedelbart efter stängande</item>
+    </plurals>
     <string name="general_error">FEL</string>
     <string name="general_yes">Ja</string>
     <string name="general_no">Nej</string>
@@ -122,6 +126,7 @@
     <string name="general_copy_title">Kopiera</string>
     <string name="general_back">Tillbaka</string>
     <string name="general_server_error">Det har uppstått ett fel. Försök senare</string>
+    <string name="general_non_exist_photo_error">Kunde inte slutföra handlingen, eftersom fotot är borttaget</string>
     <string name="general_data_error">Det har uppstått ett fel. Vänligen försök igen</string>
     <string name="general_internet_off">Anslutning till Internet saknas</string>
     <string name="general_msg_copied">Texten kopierad</string>
@@ -129,6 +134,9 @@
     <string name="general_profile_error">Det har uppstått ett fell vid profiluppladning</string>
     <string name="general_dbl_all">Alla</string>
     <string name="general_dbl_unread">Ej lästa</string>
+    <string name="general_empty_code_confirmation">Ange bekräftelsekod</string>
+    <string name="general_email_success_confirmed">E-postadressen bekräftades</string>
+    <string name="general_email_not_confirmed">E-postadressen blev inte bekräftad</string>
     <string name="time_yesterday">Igår</string>
     <string name="time_today">Idag</string>
     <string name="general_send_button">Skicka</string>
@@ -137,11 +145,14 @@
     <string name="general_city">Stad</string>
     <string name="general_dating">Dejting</string>
     <string name="general_likes">Gillar mig</string>
+    <string name="general_photoblog">Fotoblogg</string>
+    <string name="general_sympathies">Sympatier</string>
     <string name="general_sympathy">Sympati</string>
     <string name="general_delight">Beundran</string>
     <string name="general_mutual">Ömsesidigt</string>
     <string name="general_dialogs">Diagoler</string>
     <string name="general_visitors">Gäster</string>
+    <string name="general_visitors_tab_views">Visningar</string>
     <string name="general_profile">Profil</string>
     <string name="general_settings">Inställningar</string>
     <string name="auth_btn_vk">Logga in via VKontakte</string>
@@ -157,21 +168,30 @@
     <string name="chat_like_out">Du har skickat en sympati</string>
     <string name="chat_mutual_in">Du har fått beundran</string>
     <string name="chat_mutual_out">Du har skickat beundran</string>
+    <string name="chat_wish_in">Någon har skickat en hemlig önskning till dig.</string>
     <string name="chat_wish_out">Du har skickat en hemlig önskan.</string>
     <string name="chat_sexuality_in">Din sexualitet har rankats</string>
     <string name="chat_sexuality_out">Du har rankat sexualitet</string>
     <string name="chat_wink_in">Någon har blinkat på dig</string>
     <string name="chat_wink_out">Du har blinkat</string>
+    <string name="filter_search">Sökning</string>
     <string name="filter_filter">Filter</string>
     <string name="filter_age_string">Från %1$d till %2$d</string>
     <string name="filter_only_beautiful">Bara snygga</string>
     <string name="filter_extra_parameters">Fler kriterier</string>
     <string name="filter_age">Ålder</string>
+    <string name="filter_age_start_prefix">Från %s</string>
+    <string name="filter_age_end_prefix">Upp till %s</string>
     <string name="filter_cities_all">I alla städer</string>
+    <string name="purchase_header_title">Balans:</string>
     <string name="buying_header_title">Inköp</string>
     <plurals name="buying_gift_you_need_coins">
         <item quantity="other">För att skicka en gåva, köp ytterligare %d mynt</item>
         <item quantity="one">För att skicka en gåva, köp ytterligare %d mynt</item>
+    </plurals>
+    <plurals name="buying_admiration_you_need_coins">
+        <item quantity="other">För att kunna skicka en beundran, köp ytterligare %d mynt</item>
+        <item quantity="one">För att kunna skicka en beundran, köp ytterligare %d mynt</item>
     </plurals>
     <plurals name="buying_unlock_likes_you_need_coins">
         <item quantity="other">För att se vem som gillar dig, köp ytterligare %d mynt</item>
@@ -181,10 +201,15 @@
         <item quantity="other">För att bli sedd av alla, köp ytterligare %d mynt</item>
         <item quantity="one">För att bli sedd av alla, köp ytterligare %d mynt</item>
     </plurals>
+    <plurals name="buying_you_need_coins">
+        <item quantity="other">Du har inte tillräckligt med mynt</item>
+        <item quantity="one">Du har inte tillräckligt med mynt</item>
+    </plurals>
     <string name="buying_default_message">För mynt kan du skicka gåvor och visa beundran</string>
     <string name="buying_money">Köp mynt</string>
     <string name="gifts_title">Välj gåva</string>
     <string name="profile_header_title">Min profil</string>
+    <string name="album_add_photo_title">Lägg till foto</string>
     <string name="profile_add_album">Välj av de befintliga</string>
     <string name="profile_add_camera">Ta bild</string>
     <string name="profile_photo">Foto</string>
@@ -225,6 +250,8 @@
     <string name="settings_messages">Meddelanden</string>
     <string name="settings_guests">Gäster</string>
     <string name="settings_help">Hjälp</string>
+    <string name="settings_faq">Frågor och svar</string>
+    <string name="settings_faq_title">Problemet finns sannolikt redan beskrivet. Kolla i avdelningen \"Frågor och svar\"</string>
     <string name="settings_account">Account</string>
     <string name="settings_feedback">Lämna utlåtande</string>
     <string name="settings_about">Om programmet</string>
@@ -233,6 +260,10 @@
     <string name="settings_rights_reserved">Topface \nKopiering förbjudet</string>
     <string name="settings_extra">Läs mer här</string>
     <string name="settings_logout">Logga ut</string>
+    <string name="settings_code_confirmation">Skicka bekräftelsekod</string>
+    <string name="settings_email_was_confirmed">Redan bekräftad</string>
+    <string name="settings_email_was_confirmed_textview_text">Om posten redan blivit bekräftadvia datorn</string>
+    <string name="settings_code_confirmation_hint">Bekräftelsekod</string>
     <string name="settings_logout_msg">Är du säker att du vill logga ut?</string>
     <string name="settings_error_message">Felmeddelande</string>
     <string name="settings_ask_developer">Fråga developer</string>
@@ -272,6 +303,7 @@
     <string name="rate_popup_error">Du behöver ange antal stjärnor du vill sätta för vår app</string>
     <string name="feedback_popup_title">Du har satt ett lågt betyg. Berätta vad är det du inte gillar i vår app. Hjälp oss att bli bättre. Tackar på förhand!</string>
     <string name="settings_melody">Notifikationsmelodi</string>
+    <string name="settings_loading_photo">Förladdning av foton</string>
     <string name="edit_refresh_status">Förnya status</string>
     <string name="ban_title">Grattis! Du har bannlysts!</string>
     <string name="ban_title_forever">Grattis! Du har bannlysts för alltid</string>
@@ -314,10 +346,12 @@
     <string name="popup_version_cancel">Påminn senare</string>
     <string name="general_version_not_supported">Applikationsversionen du använder har uråldrats och bör ej användas längre. Vänligen uddgradera applikationen</string>
     <string name="default_price_format">Totalt: %.2f USD</string>
+    <string name="default_price_format_extended">Totalt: %1$.2f %2$s</string>
     <string name="leaders_pick_condition">Di kan inte vlälja foto med rating lägre än %d%%:</string>
     <string name="general_gift">Gåva</string>
     <string name="user_actions_chat">Samtal</string>
     <string name="profile_edit_age_ranges">Åldern skall vara från 16 till 99 år. Vänligen ange korrekta uppgifter och försök igen.</string>
+    <string name="wrong_password_format">Otillgängligt format på lösenordet</string>
     <string name="sign_in">Logga in</string>
     <string name="create_account">Sätta upp ett konto</string>
     <string name="email">E-postadress</string>
@@ -330,6 +364,8 @@
     <string name="girl">tjej</string>
     <string name="start_communication">Börja umgås</string>
     <string name="birthdate">Födelsedag</string>
+    <string name="birthdate_confirm">Var snäll och konfirmer</string>
+    <string name="set_birthdate">Ange ålder</string>
     <string name="welcome_to_topface">Välkommen till Topface!</string>
     <string name="incorrect_email">Felaktig e-postadress</string>
     <string name="incorrect_login">Felaktig login</string>
@@ -345,16 +381,21 @@
     <string name="gallery">Galleri</string>
     <string name="no_photo_take_photo">Ingen kan dejta med dig! Ladda in foto eller välj från albumet</string>
     <string name="photo_for_avatar">Fotot är redo for att skickas till profilen! Det är ditt första foto och det kommer att användas som din profilbild</string>
+    <string name="change_email">Ändra e-postadress</string>
     <string name="send_confirmation_email">Maila bekräftelse</string>
     <string name="change_password">Ändra lösenord</string>
     <string name="password_changing">Ändra lösenord</string>
     <string name="save">Spara</string>
+    <string name="saving_in_progress">Sparar…</string>
     <string name="confirmation_successfully_sent">Bekräftelsen har mailats till den adress du angivit</string>
     <string name="password_confirmation_hint">Bekärfta lösenord</string>
     <string name="password_hint">lösenord</string>
     <string name="enter_new_password">Skriv ett nytt lösenord</string>
+    <string name="enter_old_password">Ange ditt gamla lösenord</string>
     <string name="enter_password_confirmation">Ange bekräftelsen</string>
     <string name="passwords_mismatched">Lösenorden sammanfaller inte</string>
+    <string name="old_password_mismatched">Felaktigt gammalt lösenord</string>
+    <string name="passwords_matched">Det nya lösenordet matcher med det gamla</string>
     <string name="passwords_changed">Lösenordet ändrats</string>
     <string name="take_photo">Ta foto</string>
     <string name="take_another_photo">Annan bild</string>
@@ -448,6 +489,7 @@
     <string name="likes_can_help_you">Sympatier kan träffas</string>
     <string name="general_get_dating">Dejta</string>
     <string name="settings_select_language">Välj applikationens språk</string>
+    <string name="settings_select_preload_photo_type">Välj när förladdningen av foton fördes in</string>
     <string name="restart_to_change_locale">För att byta språk behöver man logga om appen</string>
     <string name="locale_changing">Byta språk</string>
     <plurals name="you_were_liked">
@@ -458,10 +500,12 @@
     <string name="or">eller</string>
     <string name="settings_delete_account">Radera konto</string>
     <string name="chat_block_not_mutual">Du kan börja umgås med andra användare endast om de har skickat dig sympatier eller om du har VIP-status</string>
+    <string name="add_to_favorite_block_not_vip">Endast VIP-användare kan addera till sitt urval ifrån -</string>
     <string name="delete_account_are_you_sure">Är du säker?</string>
     <string name="delete">Radera</string>
     <string name="delete_account_warning">OBS! Du försöker att radera din profil på Topface.</string>
     <string name="delete_account_error">Det gick tyvärr inte att radera ditt konto. Du kan försöka en gång till.</string>
+    <string name="delete_account_will_be_restored_are_you_sure">Du försöker att logga in på ett borttaget konto. Vid inloggning kommer kontot att återställas</string>
     <string name="restore">Återaktivera</string>
     <string name="admiration_sended">Beundran har avsänts</string>
     <string name="skip">Ignorera</string>
@@ -528,10 +572,67 @@
     <string name="loading_photo_percent">%d%% foto laddas</string>
     <string name="profile_update_error">Det har uppstått ett fel vid uppdateringen.</string>
     <string name="retry_cancel_editing">Det har uppstått ett fel vid dataavsändning till servern. Logga ut utan att spara eller försöka igen?</string>
+    <string name="retry_cancel_editing_bad_value">Du har angett felaktiga uppgifter. Försök igen eller logga ut utan att spara uppgifterna</string>
     <string name="user_does_not_exist">Användaren ej hittats</string>
     <string name="feedback_subject_ban">Klaga på orättvis bannlysning</string>
     <string name="settings_led">LED notifikation</string>
     <string name="open_market_error">Applikationens sida kan inte öppnas</string>
     <string name="billing_item_already_owned">Ditt föregående inköp bearbetas just nu, vänligen vänta</string>
     <string name="dialog">Korrespondens</string>
+    <string name="reply">Svara</string>
+    <string name="measurement_unit_weight">vikt</string>
+    <string name="measurement_unit_height">längd</string>
+    <string name="maximum_number_of_users">Maximalt antal användare valt</string>
+    <string name="logout_if_email_already_registred">Det finns redan en användare med denna e-postadressen. Om detta är din e-post, så måste du logga ut ifrån detta kontot och sedan logga in på %s konto</string>
+    <string name="recover_password_instructions">Ett meddelande med instruktioner om återställning av lösenord har skickats till din e-postadress</string>
+    <string name="email_changing">Ändring av e-post</string>
+    <string name="hint_faces_filter">Ändra parametrarna för sökning och dejta intressanta personer</string>
+    <string name="hint_faces_buy_like">Desto mer sympatier du har, desto oftare kan du bli bedömd. Glöm inte att fylla på sympatiförrådet.</string>
+    <string name="hint_myprofile_buy_vip">Köp VIP-status och njut av obegränsat umgänge</string>
+    <string name="pull_to_refresh_pull_label">Tryck för att uppdatera</string>
+    <string name="pull_to_refresh_release_label">Tillåt uppdatera</string>
+    <string name="messaging_block_buy_vip">För att fortsätta samtalat behövs VIP/u2011status</string>
+    <string name="pull_to_refresh_refreshing_label">Laddar…</string>
+    <string name="user_added_to_black_list">Användaren tillagd i svarta listan</string>
+    <string name="user_deleted_from_black_list">Användaren är borttagen ifrån den svarta listan</string>
+    <string name="user_added_to_bookmark">Användaren tillagd bland favoriter</string>
+    <string name="user_deleted_from_bookmark">Användaren är borttagen ur favoriter</string>
+    <string name="preload_photo_type_wifi_3g">WiFi och 3G</string>
+    <string name="preload_photo_type_wifi">Endast WiFi</string>
+    <string name="preload_photo_type_always_on">Alltid igång</string>
+    <string name="preload_photo_type_preload_off">Avstängd</string>
+    <string name="wrong_time_popup_text">Lyckades inte installera en säker anslutning till servern. \nDet är möjligt att antingen datum eller tid på din apparat är felaktigt angivna</string>
+    <string name="wrong_time_popup_button">Öppna inställningar</string>
+    <string name="enter_text">Sätt in text</string>
+    <string name="send_feedback">Skicka feedback</string>
+    <string name="get_vip_free">Få VIP gratis</string>
+    <string name="buy_more_sympathies">\"Få mera sympatier, bli mera populär\"</string>
+    <string name="google_service_general_title">Avisering otilltänglig</string>
+    <string name="google_service_disabled_title">Du har tjänsterna för Google Play avstänga, vilka är nödvändiga för att avi-funktionen ska kunna fungera</string>
+    <string name="google_service_disabled_button">Sätt igång</string>
+    <string name="google_service_missing_title">Du har inte tjänsterna ifrån Google Play installerade, vilka är nödvändiga för aviseringsfunktionen</string>
+    <string name="google_service_missing_button">Installera</string>
+    <string name="google_service_version_update_required_title">Du har en äldre version av Google Plays tjänster installerade. Var snäll och uppdatera för att aviseringsfunktionen ska fungera korrekt</string>
+    <string name="google_service_version_update_required_button">Uppdatera</string>
+    <string name="google_invalid_account_title">Kontrollera uppgifterna på ditt Google-konto eller ta kontakt med Googles tekniska support</string>
+    <string name="google_sign_in_account_title">Du har ännu inte lagt till ett Google-konto, vilket du behöver göra om du vill kunna få aviseringar</string>
+    <string name="google_sign_in_account_button">Bli auktoriserad</string>
+    <string name="google_unavailable_services_title">Tyvärr så stöds inte aviseringar på din apparat</string>
+    <string name="receive_message_notification">Få underrättelse vid nytt meddelande</string>
+    <string name="receive_mutual_notification">Få underrättelse vid ny ömsesidig sympati</string>
+    <string name="receive_sympathy_notification">Få underrättelse vid ny sympati</string>
+    <string name="receive_guest_notification">Få meddelande om ny besökare</string>
+    <string name="on_phone">På telefon</string>
+    <string name="on_mail">På e-post</string>
+    <string name="add_leader_hint">Din hälsning…</string>
+    <string name="more">ytterligare</string>
+    <string name="premium_for_invitations">För att få 1-dags VIP-status behöver du samla ihop fem nya registreringar</string>
+    <string name="premium_for_invitations_current_status">Du har redan samlat ihop:\nInbjudningar: %1$d\nRegistreringar: %2$d</string>
+    <string name="no_contacts_available">På apparaten finns inte kontakter tillgängliga för skildring</string>
+    <string name="sms_invite_title">Få ett dygns VIP!</string>
+    <string name="sms_invite_subtitle">Få ett dygns VIP!</string>
+    <string name="status_can_send_confirmation">Bjud in</string>
+    <string name="status_invilid_phone_number">Numret är ogiltigt</string>
+    <string name="status_confirmation_was_sent">Väntar på registrering</string>
+    <string name="status_user_registered">Redan registrerad</string>
 </resources>
