--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -401,7 +401,7 @@
     <string name="ban_title_forever">Поздравляем! Вы забанены навсегда</string>
     <string name="ban_title_until">Поздравляем! Вы забанены до %s</string>
     <string name="ban_complain">Пожаловаться на бан</string>
-    <string name="general_ready">Готово.</string>
+    <string name="general_ready">Готово</string>
     <string name="buying_store_ok">Покупка успешно завершена.</string>
     <string name="vip_privileges">VIP-привилегии</string>
 
