--- a/src/main/res/values-es/strings.xml
+++ b/src/main/res/values-es/strings.xml
@@ -645,4 +645,5 @@
     <string name="status_invilid_phone_number">Número no valido</string>
     <string name="status_confirmation_was_sent">Esperando confirmación</string>
     <string name="status_user_registered">Ya registrado</string>
+    <string name="balance">Saldo (%1$d{{balance_coins}} %2$d{{balance_sympathies}})</string>
 </resources>
