--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -515,9 +515,9 @@
 
     <string name="password_confirmation_hint">Подтверждение пароля</string>
     <string name="password_hint">пароль</string>
-    <string name="enter_new_password">Введите новый пароль.</string>
-    <string name="enter_old_password">Введите старый пароль.</string>
-    <string name="enter_password_confirmation">Введите подтверждение пароля.</string>
+    <string name="enter_new_password">Введите новый пароль</string>
+    <string name="enter_old_password">Введите старый пароль</string>
+    <string name="enter_password_confirmation">Введите подтверждение пароля</string>
     <string name="passwords_mismatched">Пароли не совпадают.</string>
     <string name="old_password_mismatched">Неверный старый пароль.</string>
     <string name="passwords_matched">Новый и старый пароли совпадают.</string>
