--- a/src/main/res/values-it/strings.xml
+++ b/src/main/res/values-it/strings.xml
@@ -390,6 +390,9 @@
     <string name="save">Salvare</string>
     <string name="saving_in_progress">Salvataggio…</string>
     <string name="confirmation_successfully_sent">All’indirizzo e-mail da te indicato è stata inviata la conferma</string>
+    <string name="email_successfully_confirmed">Indirizzo e-mail confermato con successo.</string>
+    <string name="email_not_confirmed">Indirizzo e-mail non confermato.</string>
+    <string name="email_already_confirmed">Indirizzo e-mail confermato</string>
     <string name="password_confirmation_hint">Conferma la password</string>
     <string name="password_hint">password</string>
     <string name="enter_new_password">Inserisci la nuova password</string>
@@ -486,6 +489,7 @@
     <string name="black_list_add_short">Nella black list</string>
     <string name="confirm_email_for_dating">Siamo contrari allo spam. Conferma il tuo e-mail per chattare su Topface!</string>
     <string name="confirm_email_for_dating_title">Noi siamo contro lo spam</string>
+    <string name="confirm_email_for_dating_desc">Conferma il tuo indirizzo di posta per fare nuove conoscenze su Topface!</string>
     <string name="send_confirm_link">Invia il link di conferma</string>
     <string name="complain_type_swearing_msg">Cafonate, minacce, parolacce</string>
     <string name="general_exit">Logout</string>
@@ -637,4 +641,7 @@
     <string name="status_invilid_phone_number">Numero non valido</string>
     <string name="status_confirmation_was_sent">In attesa di registrazione</string>
     <string name="status_user_registered">È già stato registrato</string>
+    <string name="balance">Saldo (%1$d{{balance_coins}} %2$d{{balance_sympathies}})</string>
+    <string name="trial_vip_text">Modalità VIP gratis per 7 giorni</string>
+    <string name="trial_vip_button_text">Connettere VIP</string>
 </resources>
