--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -827,4 +827,8 @@
 
     <string name="trial_vip_text">Бесплатный VIP\nна 7 дней</string>
     <string name="trial_vip_button_text">Подключить VIP</string>
+    
+    <string name="settings_check_vip_title">Проверка активность VIP статуса</string>
+    <string name="settings_check_vip_cell">Проверить VIP статус</string>
+    <string name="settings_check_vip_alert">Запрос на проверку отправлен</string>
 </resources>
