--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -647,4 +647,8 @@
     <string name="status_confirmation_was_sent">Awaiting for registration</string>
     <string name="status_user_registered">Already registered</string>
     <string name="balance">Balance (%1$d{{balance_coins}} %2$d{{balance_sympathies}})</string>
+    
+    <string name="settings_check_vip_title">Check VIP activity</string>
+    <string name="settings_check_vip_cell">Check VIP status</string>
+    <string name="settings_check_vip_alert">Check request is sent</string>
 </resources>
