--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -502,6 +502,7 @@
     <string name="photo_for_avatar">Фотография готова к отправке в профиль! Это ваша первая фотография и она будет
         использоваться как ваша аватарка.
     </string>
+    <string name="add_photo_before">Сначала необходимо добавить фото</string>
 
     <string name="change_email">Изменить e-mail</string>
     <string name="send_confirmation_email">Выслать подтверждение на e-mail</string>
@@ -827,7 +828,7 @@
 
     <string name="trial_vip_text">Бесплатный VIP\nна 7 дней</string>
     <string name="trial_vip_button_text">Подключить VIP</string>
-    
+
     <string name="settings_check_vip_title">Проверка активности VIP статуса</string>
     <string name="settings_check_vip_cell">Проверить VIP статус</string>
     <string name="settings_check_vip_alert">Запрос на проверку отправлен</string>
