--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -600,7 +600,7 @@
         <item quantity="other">Получи VIP бесплатно за %d приглашений</item>
     </plurals>
     <string name="buy_status_and_watch_your_fans">Купите VIP-статус и узнайте, кто добавил вас в избранное</string>
-    <string name="add_bookmarks_to_be_connected">Добавляйте новых знакомых в этот раздел, и вы не потеряете с ними связь</string>
+    <string name="add_bookmarks_to_be_connected">Добавляйте новых знакомых в этот раздел и вы не потеряете с ними связь</string>
     <string name="nobody_chat_with_you_sympathies_will_help">Вам еще никто не писал. Симпатии помогут в поиске собеседника</string>
     <string name="rate_and_have_mutual_or_buy_and_chat">Обменивайтесь симпатиями или покупайте их, чтобы начать общаться прямо сейчас.</string>
 
@@ -833,8 +833,8 @@
     <string name="trial_vip_text">Бесплатный VIP\nна 7 дней</string>
     <string name="trial_vip_button_text">Подключить VIP</string>
 
-    <string name="settings_check_vip_title">Проверка активности VIP статуса</string>
-    <string name="settings_check_vip_cell">Проверить VIP статус</string>
+    <string name="settings_check_vip_title">Проверка активности VIP-статуса</string>
+    <string name="settings_check_vip_cell">Проверить VIP-статус</string>
     <string name="settings_check_vip_alert">Запрос на проверку отправлен</string>
     
     
