--- a/src/main/res/values-pl/strings.xml
+++ b/src/main/res/values-pl/strings.xml
@@ -396,4 +396,6 @@
     </plurals>
     <string name="or">lub</string>
     <string name="auth_btn_ok">Zaloguj się za pomocą Odnoklassniki</string>
+    <string name="novice_sympathy">Wysyłaj sympatie tym, kto Ci\nrzeczywiście się podoba,\naby zacząć miłą znajomość</string>
+    <string name="novice_sympathies_bonus">Otrzymasz %1$d sympatii\nprezencie! To oznacza, że\nna pewno się spodobasz %2$d osobom,\nktóre wyrażą Ci swoją sympatię</string>
 </resources>
