--- a/src/main/res/values-sv/strings.xml
+++ b/src/main/res/values-sv/strings.xml
@@ -634,4 +634,6 @@
     <string name="status_invilid_phone_number">Numret är ogiltigt</string>
     <string name="status_confirmation_was_sent">Väntar på registrering</string>
     <string name="status_user_registered">Redan registrerad</string>
+    <string name="novice_sympathy">Skicka sympatier till dem\ndu verkligen gillar,\nför att inleda ett trevligt förhållande</string>
+    <string name="novice_sympathies_bonus">Du får %1$d sympatier i\npresent! Detta innebär, att\n%2$d personer kommer att gilla dig\noch visa sin sympati för dig</string>
 </resources>
