--- a/src/main/res/values-el/strings.xml
+++ b/src/main/res/values-el/strings.xml
@@ -557,4 +557,6 @@
     <string name="google_service_version_update_required_button">Ανανεώστε</string>
     <string name="google_sign_in_account_title">Δεν έχετε προσθέσει το λογαριασμό Google, θα πρέπει να εγγραφείτεб αν θέλετε να ενημερώνεστε.</string>
     <string name="add_leader_hint">Χαιρετισμό σας …</string>
+    <string name="novice_sympathy">Στείλτε συμπάθεια για εκείνους που \nσας αρέσει πραγματικά\ nγια να ξεκινήσετε μια ευχάριστη γνωριμία</string>
+    <string name="novice_sympathies_bonus">Παίρνετε %1$d συμπάθειες για\nδωρεάν!  Αυτό σημαίνει ότι, εσέις\n θα αρέσετε ακριβώς για %2$d τους ανθρώπους,\nοποίοι θα εκφράζουν την συμπάθεια για σας</string>
 </resources>
