--- a/src/main/res/values-ro/strings.xml
+++ b/src/main/res/values-ro/strings.xml
@@ -388,4 +388,6 @@
     <string name="restore">Restabileste</string>
     <string name="admiration_sended">Admirare trimisa</string>
     <string name="auth_btn_ok">Intra prin Odnoklassniki</string>
+    <string name="novice_sympathy">Trimiteti simpatii la cei \n care va sunt dragi cu adevarat, \n pentru a incepe o cunostinta placuta</string>
+    <string name="novice_sympathies_bonus">Dmv primiti %1$d simpatii \ncadou! Aceasta inseamna, ca Dmv\nprecis placeti %2$d la oameni,\ncare va exprima simpatia lor</string>
 </resources>
