--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -441,4 +441,6 @@
     <string name="billing_item_already_owned">Ваша попередня покупка в обробці, будь ласка почекайте</string>
     <string name="dialog">Переписка</string>
     <string name="reply">Відповісти</string>
+    <string name="novice_sympathy">Відправляйте симпатії тим, хто вам\nдійсно подобається,\nщоб почати приємне знайомство</string>
+    <string name="novice_sympathies_bonus">- Ви отримуєте %1$d симпатій у\nподарунок! Це означає, що ви\nточно сподобаєтеся %2$d людям, \nякі висловлять вам свою симпатію</string>
 </resources>
