--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -461,7 +461,7 @@
     <string name="add_bookmarks_to_be_connected">Add new contacts to this section and you\'ll never lose touch with them.</string>
     <string name="nobody_chat_with_you_sympathies_will_help">No one has written to you yet! Likes will help you find someone to chat with! :)</string>
     <string name="rate_and_have_mutual_or_buy_and_chat">Send Likes and get them in return! Start chating now!</string>
-    <string name="with_vip_find_your_visitors">With VIP-status you can find out who visited your page.</string>
+    <string name="with_vip_find_your_visitors">With VIP-status you can find out who visited your page</string>
     <string name="on_avatar">Set as your profile picture</string>
     <string name="your_avatar">Profile picture</string>
     <string name="avatar_set_successfully">Your profile photo has been successfully set</string>
